[package]
name = "nohash"
version = "0.2.0"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"
description = "NoHash hash table"
readme = "README.md"
repository = "https://github.com/lambdaxymox/nohash"


[dependencies]
nohash-hasher = "0.2.0"

[features]
default = ["std"]
std = []

